# Nomad

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: weekly-draft.yml
config/: settings.yaml
data/: tmp_check_region.py
data/raw/inec/: AprobadosAplazadosReprobados14-22.xlsx  C-14_2025.xls  Cuenta_Satelite_Turismo_2021.xlsx  Distribución de Nacimientos y Defunciones Preliminares 2025.xlsx  RendimientoDefinitivoSistemaEducativoCostarricense24.xlsx  emp_I_trim_2026.xls  extranjeroscolegios-2014-2022.xlsx  reEconomCBA062026-01.xlsx  reenaho2025-ipm_1.xlsx  sepobrezaenaho-2010-2025-01.xlsx  tra_I_trim_2026.xls  Índice de precios al consumidor (IPC).csv
src/nomad/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py  utils.py
src/nomad/agent/: __init__.py  analyzer.py  llm.py  writer.py
src/nomad/ingest/: __init__.py  apis.py  inec_loader.py  rss.py  scrapers.py
src/nomad/mcp/: __init__.py  client.py  ingestor.py  servers.py
src/nomad/mcp/wrappers/: __init__.py  imf_wrapper.py  intel_wrapper.py  news_wrapper.py
src/nomad/process/: __init__.py  categorize.py  dedupe.py  freshness.py  store.py
