[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nomad-cr"
version = "0.1.0"
description = "Pipeline de análisis político y datos de Costa Rica para posts LinkedIn"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "openpyxl>=3.1.0",
  "xlrd>=2.0.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "python-dateutil>=2.8.2",
  "tenacity>=8.2.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pyyaml>=6.0.1",
  "openai>=1.30.0",
  "schedule>=1.2.1",
]

[project.scripts]
nomad = "nomad.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
